# simplmail

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/simplmail/: __main__.py  smail.py
