[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simplmail"
authors = [
  { name="Semenii Maksym", email="maks20sem@gmail.com" },
]
description = "Simple email client"
dependencies = ["recanvas", "jinja2", "msgpack"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/simplmail/_version.py"

[project.scripts]
smail = "simplmail.__main__:run"
